Fixed leaf node alignment

--- a/src/components/CategoryTree.scss
+++ b/src/components/CategoryTree.scss
@@ -13,6 +13,10 @@
     padding: 0;
   }
 
+  .tree-leaf-list-item {
+    margin-left: 21px;
+  }
+
   .tree-branch-wrapper,
   .tree-node__leaf {
     outline: none;
